[gd_scene load_steps=3 format=2]

[ext_resource path="res://guns/gun.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_local_to_scene = true
resource_name = "Shoot"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 1 ), Vector2( 1, 1 ) ]
}

[node name="Gun" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 3

[node name="Barrel" type="Position2D" parent="."]
__meta__ = {
"_gizmo_extents_": 4.0
}

[node name="CoolDown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Shoot"
anims/Shoot = SubResource( 1 )

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
max_distance = 256.0
bus = "SFX"

[connection signal="timeout" from="CoolDown" to="." method="_on_CoolDown_timeout"]
